# AudioEase

./: .gitignore  CMakeLists.txt  README.md
projects/: CMakeLists.txt  conventions.txt
projects/00_cmakeTest/: CMakeLists.txt  main.cpp
projects/01_myFirstPlugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  conventions.txt  sine.cpp  sine.h
projects/02_audioInOut/: CMakeLists.txt  PluginProcessor.cpp  conventions.txt
projects/03_theMirrorRoom/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  circularBuffer.cpp  circularBuffer.h  delay.cpp  delay.h  grid.cpp  grid.h  interpolation.cpp  interpolation.h  receiver.cpp  receiver.h  reflectionManager.cpp  reflectionManager.h  room.cpp  room.h  tappedDelay.cpp  tappedDelay.h
projects/03_theMirrorRoom/JUCE_files/: PluginProcessor.cpp  PluginProcessor.h
projects/04_delay/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  circularBuffer.h
projects/04_tappedDelay/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  circularBuffer.cpp  circularBuffer.h  tappedDelay.cpp  tappedDelay.h
projects/05_delay/: circularBuffer.cpp
projects/05_writeToWAV/: CMakeLists.txt  main.cpp
projects/06_convolution/: CMakeLists.txt  conventions.txt  main.cpp
projects/07_FFT/: CMakeLists.txt  FFT.h  main.cpp
projects/08_convoluteWAV/: CMakeLists.txt  FFT.h  main.cpp
projects/plot/: CMakeLists.txt  main.cpp  output.csv
projects/test/: CMakeLists.txt  main.cpp  output.csv  plot.py
test/: CMakeLists.txt
test/00_testRoom/: CMakeLists.txt  circularBuffer.cpp  delay.cpp  grid.cpp  grid.h  main.cpp  reflectionManager.cpp
