#add_subdirectory(00_cmakeTest)
#add_subdirectory(01_myFirstPlugin)
#add_subdirectory(02_audioInOut)
#add_subdirectory(03_theMirrorRoom)
#add_subdirectory(04_tappedDelay)
#add_subdirectory(05_delay)
add_subdirectory(06_convolution)
add_subdirectory(07_FFT)
add_subdirectory(test)
add_subdirectory(plot)